@@ -58,6 +58,9 @@ version 0.60:
 	* Nice Oscar changes--mostly internal (Thanks Mark Doliner)
 	* event_del_conversation for plugins (Thanks Bill Tompkins)
 	* Code cleanups and fixes (Thanks Federico Mena Quintero)
+	* aim:// URI's supported with gaim-remote command
+	* Don't auto-login if an existing Gaim session is already
+	  running.
 
 version 0.59 (06/24/2002):
 	* Hungarian translation added (Thanks, Sutto Zoltan)
